--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.3.1",
+    "react-typed": "^1.2.0",
     "three": "^0.144.0",
     "tsparticles": "^2.3.1",
     "web-vitals": "^2.1.4",
