--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "flipclock": "^0.10.8",
     "framer-motion": "^7.3.6",
     "number-to-words": "^1.2.4",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-flip-clock-count-down": "^1.0.1",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.3.1",
-    "react-typed": "^1.2.0",
     "three": "^0.144.0",
     "tsparticles": "^2.3.1",
     "web-vitals": "^2.1.4",
